# mi-super

./: .env.example  MIGRATIONS.md  README.md  SETUP.md  config.js  index.html  manifest.json  mi-super-ai.html  sw.js
.github/workflows/: keep-alive.yml
client/: vite.config.js
client/src/: main.js  styles.css
client/src/lib/: api.js  cache.js  sync.js  ui.js
client/src/panels/: panel-manager.js  panel-registry.js  panel-tree.js
client/src/shell/: command-palette.js  topbar.js
client/src/views/: comms.js  contacts.js  dashboard.js  login.js  tasks.js  vault.js
cloud-organizer/: .gitignore  config.example.yaml  pyproject.toml
cloud-organizer/cloud_organizer/: __init__.py  cli.py  config.py  db.py  models.py
cloud-organizer/cloud_organizer/connectors/: __init__.py  base.py  dropbox_connector.py  google_drive.py  icloud_local.py  onedrive.py
cloud-organizer/cloud_organizer/services/: __init__.py  duplicates.py  indexer.py  notion_sync.py  tagger.py
cloud-organizer/cloud_organizer/web/: __init__.py  app.py
cloud-organizer/cloud_organizer/web/static/: app.js  style.css
cloud-organizer/cloud_organizer/web/templates/: dashboard.html
nexusai/: package-lock.json  package.json  supabase-schema.sql
nexusai/client/: index.html  package.json  vite.config.js
nexusai/client/src/: main.js  styles.css
nexusai/server/: package.json
nexusai/server/src/: config.js
server/src/: config.js  index.js
server/src/integrations/: calendar.js  linear.js  notion.js  slack.js
server/src/middleware/: auth.js
server/src/routes/: actions.js  (+3 more)
supabase/: schema.sql
(+32 files in other folders)
